# courses-data

./: Cargo.toml  index.html  justfile
docs/installation-example/: README.md
docs/writeup/: main.typ  stellar-iac.typ
docs/writeup/media/: brotli.csv  brotli_fast.csv  merge_compression_benchmarks.R  merged_compression_benchmarks.csv  uncompressed.csv  zlib.csv
src/: lib.rs  main.rs
