[package]
name = "courses-data"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
bm25 = { git = "https://github.com/Michael-JB/bm25.git", rev = "e07bdab4863db089076f569daf90c58071a02631", features = ["serde"] }
flate2 = { version = "1.1.4", features = ["zlib-rs"], default-features = false, optional = true}
brotli = { version = "8.0.2", optional = true}
json = "0.12.4"
serde = "1.0.228"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
web-time = "1.1.0"
log = "0.4.28"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = "5.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0.0"

[features]
zlib = ["dep:flate2"]
brotli = ["dep:brotli"]
